<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/pexels"
            android:icon="@drawable/pixels"
            android:title="@string/pexels" />
        <item
            android:id="@+id/movie_information"
            android:icon="@drawable/movie"
            android:title="@string/movie_name" />
        <item
            android:id="@+id/ticketmaster"
            android:icon="@drawable/ticketmaster"
            android:title="@string/ticket_master_name" />
        <item
            android:id="@+id/soccer_highlights"
            android:icon="@drawable/soccer"
            android:title="@string/soccer_name" />
        <item
            android:id="@+id/homepage"
            android:icon="@drawable/homepage"
            android:title="@string/homepage" />

    </group>
</menu>