<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.TicketMasterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/citySearch"
                    android:layout_width="146dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:inputType="text"
                    android:hint="@string/city"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/radiusSearch"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/radiusSearch"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:hint="@string/radius_km"
                    app:layout_constraintStart_toEndOf="@+id/citySearch"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="73dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/search"
                    android:textSize="9sp"
                    app:layout_constraintBottom_toBottomOf="@+id/radiusSearch"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/radiusSearch" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=""/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventsRecyclerView"
                android:layout_width="435dp"
                android:layout_height="730dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>